[package]
name = "hostlist_iter"
version = "0.1.0"
authors = ["Marcus Epperson <marcus.r.epperson@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mrepper/hostlist_iter"
keywords = ["hostlist", "nodeset", "cluster", "hpc"]
categories = ["command-line-interface", "command-line-utilities"]
description = "A hostlist handling library"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
derive_more = { version = "2.0", features = ["from", "display"] }
pest = "2.8"
pest_derive = "2.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "hostlist_iter"
required-features = ["cli"]

[features]
cli = ["clap"]

[[bench]]
name = "hostlist_n"
harness = false

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[lints.clippy]
pedantic = { level = "warn" }

# for dev work
# [lints.rust]
# warnings = "deny"
# unused = { level = "allow", priority = -1 }
